--- a/package.json
+++ b/package.json
@@ -1,47 +1,38 @@
 {
-	"name": "mern",
-	"version": "1.0.0",
-	"description": "MERN Project tuto",
-	"main": "server.js",
-	"scripts": {
-		"start": "node server",
-		"server": "nodemon server",
-		"client": "npm start --prefix client",
-		"dev": "concurrently \"npm run server\" \"npm run client\""
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/AGusev/MERN_Project.git"
-	},
-	"author": "Aleksandr Gusev",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/AGusev/MERN_Project/issues"
-	},
-	"homepage": "https://github.com/AGusev/MERN_Project#readme",
-	"dependencies": {
-		"axios": "^0.19.2",
-		"bcrypt": "^4.0.1",
-		"bcryptjs": "^2.4.3",
-		"config": "^3.3.1",
-		"express": "^4.17.1",
-		"express-validator": "^6.4.0",
-		"gravatar": "^1.8.0",
-		"jsonwebtoken": "^8.5.1",
-		"moment": "^2.29.1",
-		"mongoose": "^5.9.7",
-		"normalize-url": "^5.0.0",
-		"path": "^0.12.7",
-		"react-moment": "^1.0.0",
-		"react-redux": "^7.2.2",
-		"react-router-dom": "^5.2.0",
-		"redux": "^4.0.5",
-		"redux-devtools-extension": "^2.13.8",
-		"redux-thunk": "^2.3.0",
-		"request": "^2.88.2"
-	},
-	"devDependencies": {
-		"concurrently": "^5.1.0",
-		"nodemon": "^2.0.2"
-	}
+    "name": "mern",
+    "version": "1.0.0",
+    "description": "MERN Project tuto",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server",
+        "server": "nodemon server"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/AGusev/MERN_Project.git"
+    },
+    "author": "Aleksandr Gusev",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/AGusev/MERN_Project/issues"
+    },
+    "homepage": "https://github.com/AGusev/MERN_Project#readme",
+    "dependencies": {
+        "axios": "^0.19.2",
+        "bcrypt": "^4.0.1",
+        "bcryptjs": "^2.4.3",
+        "config": "^3.3.1",
+        "express": "^4.17.1",
+        "express-validator": "^6.4.0",
+        "gravatar": "^1.8.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.9.7",
+        "normalize-url": "^5.0.0",
+        "path": "^0.12.7",
+        "request": "^2.88.2"
+    },
+    "devDependencies": {
+        "concurrently": "^5.1.0",
+        "nodemon": "^2.0.2"
+    }
 }
